Fix > Section > featured product | Buttons should be aligned (#137)
## QA Steps

-  [ ] `pnpm i`
-  [ ] `pnpm dev`

--- a/assets/product.css
+++ b/assets/product.css
@@ -138,3 +138,9 @@
   margin-bottom: 5px;
   font-weight: 500;
 }
+.yc-product-card .product-price {
+  font-size: 26px;
+  font-weight: 600;
+  color: var(--yc-primary-color);
+  line-height: 24px;
+}
